--- a/Sites/Rólunk.html
+++ b/Sites/Rólunk.html
@@ -159,7 +159,7 @@
 <body>
   <div class="container" role="main">
     <!-- Button inside card -->
-    <a href="../Winery.html" class="back-btn">← Vissza</a>
+    <a href="../" class="back-btn">← Vissza</a>
 
     <header>
       <h1>Rólunk</h1>
@@ -204,3 +204,4 @@
   </div>
 </body>
 </html>
+
