--- a/Sites/Elérhetőségeink.html
+++ b/Sites/Elérhetőségeink.html
@@ -63,7 +63,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="../Winery.html" class="back-btn">← Vissza</a>
+    <a href="../" class="back-btn">← Vissza</a>
 
     <h1>Elérhetőségeink</h1>
     <p>Kérdése van? Vegye fel velünk a kapcsolatot!</p>
@@ -72,3 +72,4 @@
   </div>
 </body>
 </html>
+
