--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         }
         .extra-section-buttons {
             position: fixed; /* Keep buttons in place */
-            bottom: 50px;
-            left: 250px;
+            bottom: 2.5%;
+            left: 12.5%;
             z-index: 1100; /* Ensure buttons appear above the overlay */
             opacity: 0; /* Initially hidden */
             transition: opacity 0.5s ease-in-out; /* Smooth fade-in/out effect */
@@ -152,3 +152,4 @@
     </script>
 </body>
 </html>
+
